<resources>
    <string name="app_name">Psychosophy</string>

    <string name="welcome_activity">Welcome</string>

    <string name="test">Тест</string>
    <string name="test_results">Результаты теста</string>
    <string name="psychotypes">Психотипы</string>
    <string name="psychotype_description">Описание псхотипа</string>
    <string name="relationships">Отношения</string>
    <string name="about">О программе</string>
    <string name="introduction">Вступление</string>
    <string name="functions">Функции</string>

    <string name="menu_header">Добро пожаловать!</string>
    <string name="menu_header_info">To the app devoted to Psychosophy</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
</resources>
