<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_introduction"
            android:title="@string/introduction"/>

        <item
            android:id="@+id/nav_bases_and_functions"
            android:title="@string/bases_and_functions"/>

        <item
            android:id="@+id/nav_test"
            android:title="@string/test" />
        <item
            android:id="@+id/nav_psychotypes"
            android:title="@string/psychotypes" />

        <item
            android:id="@+id/nav_relationships"
            android:title="@string/relationships" />

        <item
            android:id="@+id/nav_functions"
            android:title="@string/functions"/>

        <item
            android:id="@+id/nav_about"
            android:title="@string/about"/>

    </group>

</menu>